--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": ">=8.3",
         "ext-json": "*",
         "ext-xmlwriter": "*",
-        "ibexa/core": "~5.0.x-dev",
+        "ibexa/core": "dev-ibx-8534-core-v5-p2 as 5.0.x-dev",
         "netgen/query-translator": "^1.0.2",
         "symfony/http-kernel": "^5.0",
         "symfony/dependency-injection": "^5.0",
